--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -63,8 +63,16 @@
         <switch checked="{{showPrice}}" bindchange="switchChange" />
       </view>
       <view>
-        <van-button class="space-check-item" type="{{goodPriceType === 1 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{1}}" data-key="goodPriceType">零售</van-button>
-        <van-button wx:if="{{showPrice}}" type="{{goodPriceType === 2 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发</van-button>
+        <van-button class="space-check-item" type="{{goodPriceType === 1 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{1}}" data-key="goodPriceType">零售({{
+          goodUnitType === 1 ? good.sellSingle : good.sellAll
+        }})</van-button>
+        <van-button wx:if="{{showPrice}}" type="{{goodPriceType === 2 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发({{
+          goodUnitType === 1 ? good.midSingle : good.midAll
+        }})</van-button>
+        <view>
+          <view>自定义</view>
+          <input />
+        </view>
       </view>
     </view>
     <wux-white-space size="large" />
