--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -66,20 +66,25 @@
         <van-button class="space-check-item" type="{{goodPriceType === 1 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{1}}" data-key="goodPriceType">零售({{
           goodUnitType === 1 ? good.sellSingle : good.sellAll
         }})</van-button>
-        <van-button wx:if="{{showPrice}}" type="{{goodPriceType === 2 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发({{
+        <van-button wx:if="{{showPrice}}" type="{{goodPriceType === 2 ? 'primary' : 'default'}}" class="space-check-item" size="mini" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发({{
           goodUnitType === 1 ? good.midSingle : good.midAll
         }})</van-button>
-        <view>
-          <view>自定义</view>
-          <input />
-        </view>
+        <van-button type="{{goodPriceType === 3 ? 'primary' : 'default'}}" size="mini" bindtap="switchType" data-value="{{3}}" data-key="goodPriceType">自定义{{
+          writePrice ? '(' + writePrice + ')' : ''
+        }}</van-button>
       </view>
     </view>
     <wux-white-space size="large" />
     <wux-white-space size="large" />
     <view class="space-txt">
       <text>已选规格：</text>
-      {{goodNum}}{{goodUnitType === 1 ? good.unitOne.name : good.unitDouble.name}}、{{goodPriceType === 1 ? '零售' : '批发'}}
+      {{goodNum}}{{goodUnitType === 1 ? good.unitOne.name : good.unitDouble.name}}、{{goodPriceType === 1 ? '零售' : goodPriceType === 2 ? '批发' : '自定义'}}、单价{{
+        goodUnitType === 1 ? (
+          goodPriceType === 1 ? good.sellSingle : goodPriceType === 2 ? good.midSingle : writePrice
+        ) : (
+          goodPriceType === 1 ? good.sellAll : goodPriceType === 2 ? good.midAll : writePrice
+        )
+      }}元
     </view>
     <wux-white-space size="large" />
     <view class="space-info">
@@ -88,9 +93,9 @@
         <text>￥</text>
         {{
           goodUnitType === 1 ? (
-            goodPriceType === 1 ? goodNum * good.sellSingle : goodNum * good.midSingle
+            goodPriceType === 1 ? goodNum * good.sellSingle : goodPriceType === 2 ? goodNum * good.midSingle : goodNum * writePrice
           ) : (
-            goodPriceType === 1 ? goodNum * good.sellAll : goodNum * good.midAll
+            goodPriceType === 1 ? goodNum * good.sellAll : goodPriceType === 2 ? goodNum * good.midAll : goodNum * writePrice
           )
         }}
       </view>
@@ -98,3 +103,24 @@
     </view>
   </view>
 </van-dialog>
+<!-- 自定义价格输入框 -->
+<view wx:if="{{visible2}}">
+  <view class="price-mask"></view>
+  <view class="price-container">
+    <view class="price-title">
+      <text bindtap="onClose2">取消</text>
+      <text>请输入自定义价格</text>
+      <text bindtap="onOk">确定</text>
+    </view>
+    <wux-white-space size="large" />
+    <wux-cell hover-class="none">
+      <wux-input
+        label="价格"
+        placeholder="请输入价格"
+        controlled
+        value="{{writePrice}}" />
+    </wux-cell>
+    <wux-white-space size="large" />
+    <wux-white-space size="large" />
+  </view>
+</view>
