--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -226,3 +226,40 @@
   min-width: 50px;
   padding: 0 10rpx !important;
 }
+
+.price-mask{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3000;
+  background: rgba(0, 0, 0, .3);
+}
+.price-container{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3001;
+  background: #fff;
+}
+.price-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80rpx;
+  background: #f8f8f8;
+  color: #333;
+  padding: 0 30rpx;
+}
+.price-title text:first-of-type{
+  color: #999;
+}
+.price-title text:last-of-type{
+  color: #6c6;
+}
+
+
+
+
