--- a/app.wxss
+++ b/app.wxss
@@ -4,3 +4,17 @@
 @import "miniprogram_npm/colorui/main.wxss";
 @import "miniprogram_npm/colorui/icon.wxss";
 @import "miniprogram_npm/colorui/animation.wxss";
+
+.red{
+  color: #e4393c !important;
+}
+
+.green{
+  color: aquamarine !important;
+}
+
+.purple{
+  color: purple !important;
+}
+
+
