--- a/pages/shop/index.wxml
+++ b/pages/shop/index.wxml
@@ -31,6 +31,13 @@
     </view>
     <view slot="right" class="remove" bindtap="remove" data-item="{{item}}" data-index="{{index}}">删除</view>
   </van-swipe-cell>
+  <loadmore
+    wx:if="{{shopList.length > 0}}"
+    show="{{true}}"
+    line
+    type="end"
+    end-text="我是有底线的"
+  />
 </view>
 <wux-prompt
   visible="{{ shopList.length === 0 && !loading }}"
@@ -38,7 +45,8 @@
   title="{{ msg.title }}"
   text="{{ msg.text }}"
   buttons="{{ msg.buttons }}"
-  bind:click="buttonClicked" />
+  bind:click="buttonClicked"
+/>
 <van-submit-bar
   price="{{ totalPrice*100 }}"
   button-text="去结算"
