--- a/pages/order-list/index.wxml
+++ b/pages/order-list/index.wxml
@@ -94,9 +94,11 @@
 <loadmore
   wx:if="{{orderList.length > 0}}"
   show="{{true}}"
-  line type="{{loading ? 'loading' : 'end'}}"
+  line
+  type="{{loading ? 'loading' : 'end'}}"
+  end-text="我是有底线的"
 />
-<view wx:else class="order-empty">
+<view wx:if="{{orderList.length === 0 && !loading}}" class="order-empty">
   <image src="/images/order-empty.png" />
   <text>您暂时还没有订单哦～</text>
 </view>
