--- a/miniprogram_npm/lin-ui/water-flow/index.wxss
+++ b/miniprogram_npm/lin-ui/water-flow/index.wxss
@@ -1,1 +1,2 @@
-.water-flow-container{display:flex;width:100%;box-sizing:border-box;background:0 0}.water-column{flex:1}
+.water-flow-container{display:flex;
+padding:0 30rpx;width:100%;box-sizing:border-box;background:0 0}.water-column{flex:1}
