--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -13,14 +13,16 @@
     active="{{ active }}"
     bind:change="changeTabs"
   >
-    <van-tab title="全部"></van-tab>
     <van-tab title="待付款"></van-tab>
     <van-tab title="待发货"></van-tab>
     <van-tab title="已完成"></van-tab>
+    <van-tab title="全部"></van-tab>
   </van-tabs>
 </view>
 <view wx:for="{{orderList}}" wx:key class="order-item" bindtap="linkDetail" data-id="{{item.id}}">
-  <state-box state="{{item.state}}" />
+  <view wx:if="{{active === 3}}">
+    <state-box state="{{item.state}}" />
+  </view>
   <van-cell>
       <view slot="title" class="order-line">
       <text>订单编号</text>
@@ -40,42 +42,6 @@
       <text class="red">{{item.state === 1 ? '待付款' : item.state === 2 ? '待发货' : '已完成'}}</text>
     </view>
   </van-cell>
-  <van-cell>
-    <view slot="title" class="order-line">
-      <text>创建时间</text>
-      <text class="red">{{item.createTime}}</text>
-    </view>
-  </van-cell>
-  <van-cell title="创建人" value="{{item.createUser.name}}">
-    <view slot="title" class="order-line">
-      <text>创建人</text>
-      <text>{{item.createUser.name}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.payTime}}" title="收款时间" value="{{item.payTime}}">
-    <view slot="title" class="order-line">
-      <text>收款时间</text>
-      <text>{{item.payTime}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.payUser}}" title="收款人" value="{{item.payUser.name}}">
-    <view slot="title" class="order-line">
-      <text>收款人</text>
-      <text>{{item.payUser.name}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.finishTime}}" title="发货时间" value="{{item.finishTime}}">
-    <view slot="title" class="order-line">
-      <text>发货时间</text>
-      <text>{{item.finishTime}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.finishUser}}" title="发货人" value="{{item.finishUser.name}}">
-    <view slot="title" class="order-line">
-      <text>发货人</text>
-      <text>{{item.finishUser.name}}</text>
-    </view>
-  </van-cell>
   <van-cell wx:if="{{item.customerName}}">
     <view slot="title" class="order-line">
       <text>客户名称</text>
@@ -90,6 +56,11 @@
   </van-cell>
   <van-cell wx:if="{{item.customerSite}}" title="客户地址" label="{{item.customerSite}}" border="{{ false }}">
   </van-cell>
+  <wux-white-space />
+  <van-steps
+    steps="{{ item.steps }}"
+    active="{{ item.active }}"
+  />
 </view>
 <loadmore
   wx:if="{{orderList.length > 0}}"
