--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -9,7 +9,36 @@
   padding: 20rpx;
   margin-bottom: 20rpx;
   display: flex;
+  position: relative;
 }
+
+.remove-mask{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255, 255, 255, .5);
+  z-index: 999;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 70rpx;
+}
+
+.remove-txt{
+  color: #fff;
+  font-size: 25rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, .4);
+  transform: rotate(-20deg);
+}
+
 
 .good-item image{
   width: 150rpx;
