--- a/pages/ship/index.wxml
+++ b/pages/ship/index.wxml
@@ -19,7 +19,7 @@
       data-id="{{item.id}}"
       disabled="{{item.disabled}}"
     />
-    <image src="{{item.coverImg}}" />
+    <image src="{{item.coverImg}}" mode="aspectFill" />
     <view class="good-info">
       <view class="good-name">{{item.name}}</view>
       <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
@@ -45,7 +45,7 @@
       data-id="{{item.id}}"
       disabled="{{item.disabled}}"
     />
-    <image src="{{item.coverImg}}" />
+    <image src="{{item.coverImg}}" mode="aspectFill" />
     <view class="good-info">
       <view class="good-name">{{item.name}}</view>
       <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
