--- a/pages/shop/index.wxml
+++ b/pages/shop/index.wxml
@@ -6,7 +6,7 @@
       <view class="remove-mask">
         <view class="remove-txt">已失效</view>
       </view>
-      <image src="{{item.coverImg}}" />
+      <image src="{{item.coverImg}}" mode="aspectFill" />
       <view class="good-info">
         <view class="good-name">{{item.name}}</view>
         <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingleName : item.unitAllName}}、{{
@@ -25,7 +25,7 @@
   </van-swipe-cell>
   <van-swipe-cell right-width="{{ 65 }}" wx:for="{{shopList}}" wx:key>
     <view class="good-item">
-      <image src="{{item.coverImg}}" />
+      <image src="{{item.coverImg}}" mode="aspectFill" />
       <view class="good-info">
         <view class="good-name">{{item.name}}</view>
         <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingleName : item.unitAllName}}、{{
@@ -69,5 +69,5 @@
   bind:submit="onSubmit"
   safe-area-inset-bottom="{{false}}"
 >
-  <view class="clear-btn {{ shopList.length === 0 && 'btn-empty' }}" bindtap="clearShop">清空购物车</view>
+  <view class="clear-btn {{ shopList.length === 0 && shopInvalidList.length === 0 && 'btn-empty' }}" bindtap="clearShop">清空购物车</view>
 </van-submit-bar>
