--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -12,34 +12,6 @@
   position: relative;
 }
 
-.remove-mask{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(255, 255, 255, .5);
-  z-index: 999;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 70rpx;
-}
-
-.remove-txt{
-  color: #fff;
-  font-size: 25rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 120rpx;
-  height: 120rpx;
-  border-radius: 50%;
-  background: rgba(0, 0, 0, .4);
-  transform: rotate(-20deg);
-}
-
-
 .good-item image{
   width: 150rpx;
   height: 150rpx;
@@ -48,53 +20,32 @@
 
 .good-info{
   flex: 1;
+  position: relative;
+}
+
+.edit{
+  position: absolute;
+  right: 30rpx;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .good-name{
-  color: #666;
+  color: #34BFA3;
   font-size: 30rpx;
   font-weight: bold;
 }
 
 .good-tip{
-  color: #333;
-  font-size: 28rpx;
-  margin: 10rpx 0;
-}
-
-.good-tip text{
   color: #666;
+  font-size: 28rpx;
+  margin: 16rpx 0;
 }
 
 .space-info{
   display: flex;
   justify-content: space-between;
-}
-
-.space-price{
-  color: #e4393c;
-  font-size: 32rpx;
-}
-.red{
-  color: #e4393c !important;
-}
-
-.space-price text:first-of-type{
-  font-size: 22rpx;
-  color: #333;
-}
-
-.clear-btn{
-  color: #fff;
-  font-size: 26rpx;
-  background: coral;
-  padding: 15rpx 20rpx;
-  border-radius: 10rpx;
-  margin-left: 20rpx;
-}
-
-.btn-empty{
-  opacity: .7;
+  color: #999;
 }
 
 .remove{
@@ -107,4 +58,9 @@
   color: #fff;
 }
 
-
+.add-box{
+  position: fixed;
+  bottom: 150rpx;
+  right: 30rpx;
+  z-index: 999;
+}
