--- a/utils/tools.wxs
+++ b/utils/tools.wxs
@@ -70,9 +70,24 @@ var multipleTitle = function(value, options) {
   return title;
 }
 
+/**
+ * 
+ */
+var sexTitle = function(value, options) {
+  var title;
+  for (var i = 0; i < options.length; i ++) {
+    var item = options[i];
+    if (item.value == value) {
+      title = item.name;
+    }
+  }
+  return title;
+}
+
 module.exports = {
   setSingle: setSingle,
   setAll: setAll,
   singleTitle: singleTitle,
-  multipleTitle: multipleTitle
+  multipleTitle: multipleTitle,
+  sexTitle: sexTitle
 };
