--- a/pages/setting/index.wxml
+++ b/pages/setting/index.wxml
@@ -1,3 +1,5 @@
 <van-cell title="修改个人信息" is-link />
 <wux-white-space />
+<van-cell title="使用说明" is-link />
+<wux-white-space />
 <van-cell title="退出登录" is-link bind:click="loginOut" />
