--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,8 @@
 <wxs src="../../utils/tools.wxs" module="tools" />
 
-<view class="cu-bar bg-white search">
-  <view class="search-form round">
-    <text class="cuIcon-search"></text>
-    <input type="text" placeholder="输入搜索的关键词" confirm-type="search"></input>
-  </view>
-  <view class="action">
-    <button class="cu-btn bg-gradual-green shadow-blur round">搜索</button>
-  </view>
+<!-- 搜索 -->
+<view bindtap="linkSearch">
+  <search disabled="{{true}}" />
 </view>
 <view class="VerticalBox">
   <scroll-view class="VerticalNav nav" scroll-y scroll-with-animation scroll-top="{{VerticalNavTop}}">
