--- a/pages/good/index.wxml
+++ b/pages/good/index.wxml
@@ -23,7 +23,7 @@
           <text class="cuIcon-title text-green"></text>
           {{item.name}}
         </view>
-        <van-swipe-cell right-width="{{ 65 }}" wx:for="{{item.children}}" wx:for-item="todu" wx:for-index="i" wx:key data-id="{{todu.id}}">
+        <van-swipe-cell right-width="{{ 65 }}" wx:for="{{item.children}}" wx:for-item="todu" wx:for-index="i" wx:key data-id="{{todu.id}}" disabled="{{ userInfo.role_name !== 'admin'}}">
           <view class="good-box">
             <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});"></view>
             <view class="good-content">
@@ -34,7 +34,7 @@
                 <text>￥</text>{{todu.sellSingle}}
               </view>
             </view>
-            <view class="good-btn" bindtap="showSpace" data-item="{{todu}}">
+            <view class="good-btn" bindtap="showSpace" data-item="{{todu}}" wx:if="{{ userInfo.role_name === 'admin' }}">
               <van-icon name="edit" size="30px" color="#3963bc" bindtap="editGood" data-id="{{todu.id}}" />
             </view>
           </view>
@@ -45,6 +45,6 @@
   </scroll-view>
 </view>
 
-<view class="add-box">
+<view class="add-box" wx:if="{{ userInfo.role_name === 'admin' }}">
   <van-icon name="add" size="70px" color="#34BFA3" bindtap="editGood" data-id="" />
 </view>
